sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:04:12 **** Incremental Build of configuration Debug for project spi_test ****
make all 
Building file: ../src/spi_test.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/spi_test.o" -I../../standalone_bsp_0/microblaze_0/include -mlittle-endian -mcpu=v9.5 -mxl-soft-mul -Wl,--no-relax -MMD -MP -MF"src/spi_test.d" -MT"src/spi_test.d" -o "src/spi_test.o" "../src/spi_test.c"
../src/spi_test.c: In function 'main':
../src/spi_test.c:27:12: error: 'XPAR_AXI_PERIPHS_REGFILEX16_V1_0_0_BASEADDR' undeclared (first use in this function)
  reg_ptr = XPAR_AXI_PERIPHS_REGFILEX16_V1_0_0_BASEADDR+0x04*6;
            ^
../src/spi_test.c:27:12: note: each undeclared identifier is reported only once for each function it appears in
../src/spi_test.c: In function 'spi_scan':
../src/spi_test.c:89:24: error: 'XPAR_SPI_2_BASEADDR' undeclared (first use in this function)
   case 2 : BaseAddress=XPAR_SPI_2_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
../src/spi_test.c:90:24: error: 'XPAR_SPI_3_BASEADDR' undeclared (first use in this function)
   case 3 : BaseAddress=XPAR_SPI_3_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
../src/spi_test.c:91:24: error: 'XPAR_SPI_4_BASEADDR' undeclared (first use in this function)
   case 4 : BaseAddress=XPAR_SPI_4_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
make: *** [src/spi_test.o] Error 1
11:05:23 **** Auto Build of configuration Debug for project spi_test ****
make all 
Building file: ../src/spi_test.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/spi_test.o" -I../../standalone_bsp_0/microblaze_0/include -mlittle-endian -mcpu=v9.5 -mxl-soft-mul -Wl,--no-relax -MMD -MP -MF"src/spi_test.d" -MT"src/spi_test.d" -o "src/spi_test.o" "../src/spi_test.c"
../src/spi_test.c: In function 'main':
../src/spi_test.c:14:7: warning: unused variable 'reg_ptr' [-Wunused-variable]
  u32 *reg_ptr;
       ^
../src/spi_test.c:13:30: warning: unused variable 'reg6' [-Wunused-variable]
  u32 i, j, rfadc_a, rfadc_b, reg6;
                              ^
../src/spi_test.c: In function 'spi_scan':
../src/spi_test.c:89:24: error: 'XPAR_SPI_2_BASEADDR' undeclared (first use in this function)
   case 2 : BaseAddress=XPAR_SPI_2_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
../src/spi_test.c:89:24: note: each undeclared identifier is reported only once for each function it appears in
../src/spi_test.c:90:24: error: 'XPAR_SPI_3_BASEADDR' undeclared (first use in this function)
   case 3 : BaseAddress=XPAR_SPI_3_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
../src/spi_test.c:91:24: error: 'XPAR_SPI_4_BASEADDR' undeclared (first use in this function)
   case 4 : BaseAddress=XPAR_SPI_4_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
make: *** [src/spi_test.o] Error 1
11:05:56 **** Auto Build of configuration Debug for project spi_test ****
make all 
Building file: ../src/spi_test.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/spi_test.o" -I../../standalone_bsp_0/microblaze_0/include -mlittle-endian -mcpu=v9.5 -mxl-soft-mul -Wl,--no-relax -MMD -MP -MF"src/spi_test.d" -MT"src/spi_test.d" -o "src/spi_test.o" "../src/spi_test.c"
../src/spi_test.c: In function 'main':
../src/spi_test.c:15:6: warning: unused variable 'rf_adc_data' [-Wunused-variable]
  u32 rf_adc_data[4];
      ^
../src/spi_test.c:14:7: warning: unused variable 'reg_ptr' [-Wunused-variable]
  u32 *reg_ptr;
       ^
../src/spi_test.c:13:30: warning: unused variable 'reg6' [-Wunused-variable]
  u32 i, j, rfadc_a, rfadc_b, reg6;
                              ^
../src/spi_test.c:13:21: warning: unused variable 'rfadc_b' [-Wunused-variable]
  u32 i, j, rfadc_a, rfadc_b, reg6;
                     ^
../src/spi_test.c:13:12: warning: unused variable 'rfadc_a' [-Wunused-variable]
  u32 i, j, rfadc_a, rfadc_b, reg6;
            ^
../src/spi_test.c: In function 'spi_scan':
../src/spi_test.c:89:24: error: 'XPAR_SPI_2_BASEADDR' undeclared (first use in this function)
   case 2 : BaseAddress=XPAR_SPI_2_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
../src/spi_test.c:89:24: note: each undeclared identifier is reported only once for each function it appears in
../src/spi_test.c:90:24: error: 'XPAR_SPI_3_BASEADDR' undeclared (first use in this function)
   case 3 : BaseAddress=XPAR_SPI_3_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
../src/spi_test.c:91:24: error: 'XPAR_SPI_4_BASEADDR' undeclared (first use in this function)
   case 4 : BaseAddress=XPAR_SPI_4_BASEADDR; SS_Vector=0x000000fe; cpol=0; cpha=0; break;
                        ^
make: *** [src/spi_test.o] Error 1
